--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,5 +1,5 @@
 @import "variables";
 @import "~bootstrap/scss/bootstrap";
-// @import "~bootstrap-icons/font/bootstrap-icons.scss";
+@import "~bootstrap-icons/font/bootstrap-icons.scss";
 @import "sidebar";
 @import "container";
